infra/terraform/main.tf
terraform {
  required_providers {
    aws = {
        source = "hashicorp/aws"
        version = "~>5.0"
    }
  }
}
provider "aws" {
  region = "us-east-1"
}
data "aws_iam_role" "labrole" {
  name = "LabRole"
}
resource "aws_vpc" "eks_vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "eks-vpc"
  }
}
resource "aws_subnet" "eks_subnet_1" {
  vpc_id = aws_vpc.eks_vpc.id
  cidr_block = "10.0.10.0/24"
  availability_zone = "us-east-1a"
  map_public_ip_on_launch = true
  tags = {
    Name = "eks-subnet-1"
  }
}
resource "aws_subnet" "eks_subnet_2" {
  vpc_id = aws_vpc.eks_vpc.id
  cidr_block = "10.0.20.0/24"
  availability_zone = "us-east-1b"
  map_public_ip_on_launch = true
  tags = {
    Name = "eks-subnet-2"
  }
}
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.eks_vpc.id
  tags = {
    Name = "eks-igw"
  }
}
resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.eks_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = {
    Name = "eks-route-table"
  }
}
resource "aws_route_table_association" "rta_1" {
  subnet_id = aws_subnet.eks_subnet_1.id
  route_table_id = aws_route_table.rt.id
}
resource "aws_route_table_association" "rta_2" {
  subnet_id = aws_subnet.eks_subnet_2.id
  route_table_id = aws_route_table.rt.id
}

#EKS:
resource "aws_eks_cluster" "eks" {
  name = "gamecatalog-cluster"
  role_arn = data.aws_iam_role.labrole.arn
  vpc_config {
    subnet_ids = [aws_subnet.eks_subnet_1.id,
                  aws_subnet.eks_subnet_2.id]
  }
}
resource "aws_eks_node_group" "workers" {
  cluster_name = aws_eks_cluster.eks.name
  node_group_name = "workers"
  node_role_arn = data.aws_iam_role.labrole.arn
  subnet_ids = [aws_subnet.eks_subnet_1.id,
                aws_subnet.eks_subnet_2.id]
  scaling_config {
    desired_size = 2
    max_size = 2
    min_size = 1
  }
  instance_types = ["t3.medium"]
  capacity_type = "ON_DEMAND"
}
resource "aws_ecr_repository" "backend_repo" {
  name = "backend_gamecatalog"
  image_scanning_configuration {
    scan_on_push = true
  }
  force_delete = true
  tags = {
    Name = "backend-gamecatalog"
  }
}
resource "aws_ecr_repository" "frontend_repo" {
  name = "frontend_gamecatalog"
  image_scanning_configuration {
    scan_on_push = true
  }
  force_delete = true
  tags = {
    Name = "frontend-gamecatalog"
  }
}

output "cluster_name" {
  value = aws_eks_cluster.eks.name
}
output "cluster_endpoint" {
  value = aws_eks_cluster.eks.endpoint
}
output "backend_ecr_url" {
  value = aws_ecr_repository.backend_repo.repository_url
}
output "frontend_ecr_url" {
  value = aws_ecr_repository.frontend_repo.repository_url
}
